# Taskmanager

./: CMakeLists.txt  README.md  main.cpp
Domain/: Programmer.h  Task.h
GUI/: Manager.h  ProgrammerGUI.cpp  ProgrammerGUI.h
Repository/: Models.h  Observer.h  ProgrammerRepository.cpp  ProgrammerRepository.h  TaskRepository.cpp  TaskRepository.h  progtest.txt  tasktest.txt
